# TarBzParser

./: .gitignore  CMakeLists.txt  README.md
include/TarBzParser/: BzReader.h  TarBzParser.h  TarParser.h
src/: BufReader.c  BufReader.h  BzReader.c  BzReaderTest.c  CMakeLists.txt  TarBzParser.c  TarBzParserTest.c  TarParser.c  TarParserTest.c
test/: BzReaderTest.c  BzReaderTest1.txt.bz2  CMakeLists.txt  TarBzParserTest.c  TarBzParserTest1.tar.bz2  TarParserTest.c  TarParserTest1.tar  TarParserTest1.txt
